--- a/src/pages/homepage.html
+++ b/src/pages/homepage.html
@@ -2,225 +2,218 @@
 <html lang="en">
 
   <head>
-
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>Shop Homepage - Start Bootstrap Template</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="../../assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- css -->
+	<title>Key Share</title>
+	<meta charset="UTF-8" name="viewport" content="initial-scale=1.0">
+	
+	<!-- bootstrap -->
+	<link rel="stylesheet" href="../../assets/bootstrap/css/bootstrap.min.css">
+	<script src="../../assets/bootstrap/js/bootstrap.min.js"></script>
+	
+	<!-- fontawesome -->
+	<script src="../../assets/fontawesome/js/fontawesome.min.js"></script>
+	<link rel="stylesheet" href="../../assets/fontawesome/css/all.min.css">
+    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	
+	<!-- css -->
 	<link href="../css/homepage.css" rel="stylesheet">
 	<link href="../css/footer.css.css" rel="stylesheet">
-
   </head>
 
-  <body>
+	<body>
 
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-      <div class="container">
-        <a class="navbar-brand" href="#">Start Bootstrap</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home
-                <span class="sr-only">(current)</span>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Services</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-
-    <!-- Page Content -->
-    <div class="container">
-
-      <div class="row">
-
-        <div class="col-lg-9">
-
-          <div id="carouselExampleIndicators" class="carousel slide my-4" data-ride="carousel">
-            <ol class="carousel-indicators">
-              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-              <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-            </ol>
-            <div class="carousel-inner" role="listbox">
-              <div class="carousel-item active">
-                <img class="d-block img-fluid" src="images/1.jpg" alt="First slide">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block img-fluid" src="images/2.jpg" alt="Second slide">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block img-fluid" src="images/3.png" alt="Third slide">
-              </div>
-            </div>
-            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
-          </div>
-
-          <div class="row">
-
-            <div class="col-lg-4 col-md-6 mb-4">
-              <div class="card h-100">
-                <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
-                <div class="card-body">
-                  <h4 class="card-title">
-                    <a href="#">Item One</a>
-                  </h4>
-                  <h5>$24.99</h5>
-                  <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6 mb-4">
-              <div class="card h-100">
-                <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
-                <div class="card-body">
-                  <h4 class="card-title">
-                    <a href="#">Item Two</a>
-                  </h4>
-                  <h5>$24.99</h5>
-                  <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur! Lorem ipsum dolor sit amet.</p>
-                </div>
-                <div class="card-footer">
-                  <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6 mb-4">
-              <div class="card h-100">
-                <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
-                <div class="card-body">
-                  <h4 class="card-title">
-                    <a href="#">Item Three</a>
-                  </h4>
-                  <h5>$24.99</h5>
-                  <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
-                </div>
-                <div class="card-footer">
-                  <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6 mb-4">
-              <div class="card h-100">
-                <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
-                <div class="card-body">
-                  <h4 class="card-title">
-                    <a href="#">Item Four</a>
-                  </h4>
-                  <h5>$24.99</h5>
-                  <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
-                </div>
-                <div class="card-footer">
-                  <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6 mb-4">
-              <div class="card h-100">
-                <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
-                <div class="card-body">
-                  <h4 class="card-title">
-                    <a href="#">Item Five</a>
-                  </h4>
-                  <h5>$24.99</h5>
-                  <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur! Lorem ipsum dolor sit amet.</p>
-                </div>
-                <div class="card-footer">
-                  <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6 mb-4">
-              <div class="card h-100">
-                <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
-                <div class="card-body">
-                  <h4 class="card-title">
-                    <a href="#">Item Six</a>
-                  </h4>
-                  <h5>$24.99</h5>
-                  <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
-                </div>
-                <div class="card-footer">
-                  <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-                </div>
-              </div>
-            </div>
-
-          </div>
-          <!-- /.row -->
-
-        </div>
-        <!-- /.col-lg-9 -->
-
-      </div>
-      <!-- /.row -->
-
-    </div>
-    <!-- /.container -->
-
-	<!-- Footer -->
-	<footer>
+		<!-- Navigation -->
+		<!-- Navigation -->
+		<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+			<div class="container">
+			<a class="navbar-brand" href="#">Start Bootstrap</a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarResponsive">
+				<ul class="navbar-nav ml-auto">
+				<li class="nav-item active">
+					<a class="nav-link" href="#">Home
+					<span class="sr-only">(current)</span>
+					</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">About</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">Services</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">Contact</a>
+				</li>
+				</ul>
+			</div>
+			</div>
+		</nav>
+		
+		<!-- Page Content -->
 		<div class="container">
-			<br> <hr class="style1"> <br>
-			<div class="row ">
-				<div class="col-md-6">
-					<h5 class="title"> More </h5>
-					<ul class="list-unstyled">
-						<li>
-							<a href="#"> Contact </a>
-						</li>
-						<li>
-							<a href="#"> FAQs </a>
-						</li>
-						<li>
-							<a href="#"> About us </a>
-						</li>
-					</ul>
+			<div class="col">
+				<div id="carouselExampleIndicators" class="carousel slide my-4" data-ride="carousel">
+					<ol class="carousel-indicators">
+					<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+					<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+					<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+					</ol>
+					<div class="carousel-inner" role="listbox">
+					<div class="carousel-item active">
+						<img class="d-block img-fluid" src="images/1.jpg" alt="First slide">
+					</div>
+					<div class="carousel-item">
+						<img class="d-block img-fluid" src="images/2.jpg" alt="Second slide">
+					</div>
+					<div class="carousel-item">
+						<img class="d-block img-fluid" src="images/3.png" alt="Third slide">
+					</div>
+					</div>
+					<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+					<span class="sr-only">Previous</span>
+					</a>
+					<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+					<span class="carousel-control-next-icon" aria-hidden="true"></span>
+					<span class="sr-only">Next</span>
+					</a>
 				</div>
-
-				<div class="col-md-6 d-flex justify-content-end align-items-end">
-					<p>© Copyright 2020 Key Share. All rights reserved.</p>
+				
+	
+				<br><h5 class="title"> Most popular </h5>
+				<div id="most-popular" class="row mt-2">
+						<div class="col-sm-2">
+							<div class="card h-100">
+								<a href="#"><img class="card-img-top" src="../../assets/images/fifa19.JPG" alt=""></a>
+								<div class="card-body">
+									<h6 class="card-title"> <a href="#"> Star Wars Jedi: Fallen Order </a> </h6>
+									<h5>$24.99</h5>
+								</div>
+							</div>
+						</div>
+		
+						<div class="col-sm-2">
+							<div class="card h-100">
+								<a href="#"><img class="card-img-top" src="../../assets/images/fifa19.JPG" alt=""></a>
+								<div class="card-body">
+									<h6 class="card-title"> <a href="#"> Star Wars Jedi: Fallen Order </a> </h6>
+									<h5>$24.99</h5>
+								</div>
+							</div>
+						</div>
+		
+						<div class="col-sm-2">
+							<div class="card h-100">
+								<a href="#"><img class="card-img-top" src="../../assets/images/fifa19.JPG" alt=""></a>
+								<div class="card-body">
+									<h6 class="card-title"> <a href="#"> Star Wars Jedi: Fallen Order </a> </h6>
+									<h5>$24.99</h5>
+								</div>
+							</div>
+						</div>
+		
+						<div class="col-sm-2">
+							<div class="card h-100">
+								<a href="#"><img class="card-img-top" src="../../assets/images/fifa19.JPG" alt=""></a>
+								<div class="card-body">
+									<h6 class="card-title"> <a href="#"> Star Wars Jedi: Fallen Order </a> </h6>
+									<h5>$24.99</h5>
+								</div>
+							</div>
+						</div>
+		
+						<div class="col-sm-2">
+							<div class="card h-100">
+								<a href="#"><img class="card-img-top" src="../../assets/images/fifa19.JPG" alt=""></a>
+								<div class="card-body">
+									<h6 class="card-title"> <a href="#"> Star Wars Jedi: Fallen Order </a> </h6>
+									<h5>$24.99</h5>
+								</div>
+							</div>
+						</div>
+				</div>
+				
+				<br><h5 class="title"> Most recent </h5>
+				<div id="most-recent" class="row mt-2">
+					<div class="col-sm-2">
+						<div class="card h-100">
+							<a href="#"><img class="card-img-top" src="../../assets/images/fifa19.JPG" alt=""></a>
+							<div class="card-body">
+								<h6 class="card-title"> <a href="#"> Star Wars Jedi: Fallen Order </a> </h6>
+								<h5>$24.99</h5>
+							</div>
+						</div>
+					</div>
+	
+					<div class="col-sm-2">
+						<div class="card h-100">
+							<a href="#"><img class="card-img-top" src="../../assets/images/fifa19.JPG" alt=""></a>
+							<div class="card-body">
+								<h6 class="card-title"> <a href="#"> Star Wars Jedi: Fallen Order </a> </h6>
+								<h5>$24.99</h5>
+							</div>
+						</div>
+					</div>
+	
+					<div class="col-sm-2">
+						<div class="card h-100">
+							<a href="#"><img class="card-img-top" src="../../assets/images/fifa19.JPG" alt=""></a>
+							<div class="card-body">
+								<h6 class="card-title"> <a href="#"> Star Wars Jedi: Fallen Order </a> </h6>
+								<h5>$24.99</h5>
+							</div>
+						</div>
+					</div>
+	
+					<div class="col-sm-2">
+						<div class="card h-100">
+							<a href="#"><img class="card-img-top" src="../../assets/images/fifa19.JPG" alt=""></a>
+							<div class="card-body">
+								<h6 class="card-title"> <a href="#"> Star Wars Jedi: Fallen Order </a> </h6>
+								<h5>$24.99</h5>
+							</div>
+						</div>
+					</div>
+	
+					<div class="col-sm-2">
+						<div class="card h-100">
+							<a href="#"><img class="card-img-top" src="../../assets/images/fifa19.JPG" alt=""></a>
+							<div class="card-body">
+								<h6 class="card-title"> <a href="#"> Star Wars Jedi: Fallen Order </a> </h6>
+								<h5>$24.99</h5>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
-	</footer>
-
-    <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-  </body>
-
+	
+		<!-- Footer -->
+		<footer>
+			<div class="container">
+				<br> <hr class="style1"> <br>
+				<div class="row ">
+					<div class="col-md-6">
+						<h5 class="title"> More </h5>
+						<ul class="list-unstyled">
+							<li>
+								<a href="#"> Contact </a>
+							</li>
+							<li>
+								<a href="#"> FAQs </a>
+							</li>
+							<li>
+								<a href="#"> About us </a>
+							</li>
+						</ul>
+					</div>
+	
+					<div class="col-md-6 d-flex justify-content-end align-items-end">
+						<p>© Copyright 2020 Key Share. All rights reserved.</p>
+					</div>
+				</div>
+			</div>
+		</footer>
+	</body>
 </html>
