--- a/src/pages/homepage.html
+++ b/src/pages/homepage.html
@@ -50,6 +50,9 @@
 			</div>
 		</nav>
 		
+
+		
+		
 		<!-- Page Content -->
 		<div class="container">
 			<div class="col">
@@ -81,7 +84,15 @@
 				</div>
 				
 	
-				<br><h5 class="title"> Most popular </h5>
+				<div class="row">
+					<div class="col-sm-9">
+						<h5 class="title"> Most popular </h5>
+					</div>
+					<div class="col-sm-2">
+						<button type="button" class="btn btn-outline-dark btn-lg"><i class="fas fa-angle-left"></i></button>
+						<button type="button" class="btn btn-outline-dark btn-lg"><i class="fas fa-angle-right"></i></button>
+					</div>	
+				</div>
 				<div id="most-popular" class="row mt-2">
 						<div class="col-sm-2">
 							<div class="card h-100">
@@ -134,7 +145,15 @@
 						</div>
 				</div>
 				
-				<br><h5 class="title"> Most recent </h5>
+				<div class="row">
+					<div class="col-sm-9">
+						<h5 class="title"> Most recent </h5>
+					</div>
+					<div class="col-sm-2">
+						<button type="button" class="btn btn-outline-dark btn-lg"><i class="fas fa-angle-left"></i></button>
+						<button type="button" class="btn btn-outline-dark btn-lg"><i class="fas fa-angle-right"></i></button>
+					</div>	
+				</div>
 				<div id="most-recent" class="row mt-2">
 					<div class="col-sm-2">
 						<div class="card h-100">
