--- a/template-piu/html/product.html
+++ b/template-piu/html/product.html
@@ -1,9 +1,26 @@
-<?php function drawProduct() { ?>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <title>Key Share</title>
+    <meta charset="UTF-8" name="viewport" content="initial-scale=1.0">
+    <!-- bootstrap -->
+    <link rel="stylesheet" href="./assets/bootstrap/css/bootstrap.min.css">
+    <script src="./assets/bootstrap/js/bootstrap.min.js"></script>
+    <!-- fontawesome -->
+    <script src="./assets/fontawesome/js/fontawesome.min.js"></script>
+    <link rel="stylesheet" href="./assets/fontawesome/css/all.min.css">
+    <!-- styles -->
+    <link rel="stylesheet" href="./styles/common.css">
+
+</head>
+
+<body>
     <div class="container">
         <div class="row mt-2">
             <div class="col">
                 <div class="col-xs-4 item-photo">
-                    <img style="max-width:100%;" src="../../assets/images/gta-v.webp" />
+                    <img style="max-width:100%;" src="assets/images/gta-v.webp" />
                 </div>
             </div>
             <div class="col">
@@ -68,4 +85,31 @@
         </div>
 
     </div>
-<?php } ?>
+    <footer>
+        <div id="footer" class="container">
+            <hr id="footer-line">
+            <div class="row">
+                <div class="col-md-6">
+                    <h5 class="title"> More </h5>
+                    <ul class="list-unstyled">
+                        <li>
+                            <a href="#"> Contact </a>
+                        </li>
+                        <li>
+                            <a href="#"> FAQs </a>
+                        </li>
+                        <li>
+                            <a href="#"> About us </a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="col-md-6 d-flex justify-content-end align-items-end">
+                    <p>© Copyright 2020 Key Share. All rights reserved.</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+</body>
+
+</html>
